# scraper

./: .gitignore  README.markdown  scraper.cabal
src/: Main.hs
