name:                scraper
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/birdgg/scraper#readme
license:             BSD3
license-file:        LICENSE
author:              birdgg
maintainer:          birdeggegg@gmail.com
copyright:           2016 birdgg
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable scraper
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tagsoup
                     , HTTP
                     , utf8-string
                     , optparse-applicative